# spelium-launcher

./: .gitignore  api_duzeltilmis.php  index.html  package-lock.json  package.json  tailwind.config.js
electron/: auth.js  launcher.js  main.js  patcher.js  preload.js  store.js
src/: App.jsx  index.css  main.jsx  tauri_bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mojang.rs
src/components/: Dashboard.jsx  Login.jsx  NewsPanel.jsx  ProgressBar.jsx  Settings.jsx  TitleBar.jsx
