[package]
name = "spelium-launcher"
version = "1.0.0"
description = "Spelium - Profesyonel Minecraft MMORPG Launcher"
authors = ["Spelium"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["rustls-tls", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.37", features = ["full"] }
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures-util = "0.3"
sysinfo = "0.30.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to bundle those assets into your tauri app.
custom-protocol = [ "tauri/custom-protocol" ]
